...
      const LatLng(45.49354346222445, -73.57859859130102),
    ],
  ),
  CampusBuilding(
    id: '017E9EC7C83D5B2D799F',
    name: 'H',
    fullName: 'Henry F. Hall Building',
    description: "1455 Blvd. De Maisonneuve Ouest H3G 1M8",
    campus: Campus.sgw,
    isWheelchairAccessible: true,
    hasBikeParking: true,
    hasCarParking: false,
    openingHours: ['Regular Access: Monday to Friday 7:00am to 11:00pm, Saturday and Sunday 7:00am to 9:00pm','Restricted Access: 24/7'],
...
      const LatLng(45.49746426469196, -73.57825992791349),
      const LatLng(45.49783015502715, -73.57902021993395),
    ],
  ),
  CampusBuilding(
    id: '034DC16D2C3D5B2EB8D7',
    name: 'LB',
    fullName: 'J.W. McConnell Building',
    description: "1400 Blvd. De Maisonneuve Ouest H3G 1M8",
    campus: Campus.sgw,
    isWheelchairAccessible: true,
    hasBikeParking: true,
    hasCarParking: true,
...
